# cursor-rules-hub

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/commands/: commit.md  create-manifest-template.md  create-rule-template.md  update-docs.md  update-rule-template.md
.cursor/rules/: ci-and-tests.mdc  (+3 more)
core/: identity.md
docs/: architecture.md  contributing.md  cursor-ide-practices.md  decision-log.md  usage.md
manifests/: cloudflare-sql1.yml  cloudflare-workers.yml  esbuild.yml  github-actions.yml  hono-cloudflare-full-stack.yml  hono-cloudflare-workers.yml  hono-workers.yml  hono.yml  json-ld.yml  nodejs.yml  postgresql.yml  python.yml  ruby-middleman.yml  ruby-rails-postgresql-rest-api.yml  ruby-rails.yml  ruby.yml  rust.yml  semantic-web.yml  seo.yml  sql1.yml  tailwind.yml  typescript.yml  vite.yml
scripts/: compose.py  install-cursorrules.sh  sync.py
templates/: cloudflare-sql1.cursorrules  cloudflare-workers.cursorrules  esbuild.cursorrules  github-actions.cursorrules  hono-cloudflare-full-stack.cursorrules  hono-cloudflare-workers.cursorrules  hono-workers.cursorrules  hono.cursorrules  json-ld.cursorrules  nodejs.cursorrules  postgresql.cursorrules  python.cursorrules  ruby-middleman.cursorrules  ruby-rails-postgresql-rest-api.cursorrules  ruby-rails.cursorrules  ruby.cursorrules  rust.cursorrules  semantic-web.cursorrules  seo.cursorrules  sql1.cursorrules  tailwind.cursorrules  typescript.cursorrules  vite.cursorrules
tests/: test_compose.py  test_install_cursorrules.py  test_sync.py
(+51 files in other folders)
